--- a/cdsogalerylist.ui
+++ b/cdsogalerylist.ui
@@ -63,7 +63,7 @@
      <item>
       <widget class="QPushButton" name="pushButton_2">
        <property name="text">
-        <string>Cancel</string>
+        <string>Close</string>
        </property>
       </widget>
      </item>
