--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -868,7 +868,7 @@
           <x>0</x>
           <y>0</y>
           <width>354</width>
-          <height>370</height>
+          <height>387</height>
          </rect>
         </property>
         <attribute name="label">
@@ -1039,6 +1039,9 @@
            </item>
            <item row="2" column="1">
             <widget class="QCheckBox" name="cb_extInfo">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string>Show extednded information</string>
              </property>
