--- a/csetting.ui
+++ b/csetting.ui
@@ -23,7 +23,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>4</number>
      </property>
      <property name="documentMode">
       <bool>false</bool>
@@ -4494,20 +4494,7 @@
       <layout class="QVBoxLayout" name="verticalLayout_104">
        <item>
         <layout class="QGridLayout" name="gridLayout_12">
-         <item row="0" column="2">
-          <spacer name="horizontalSpacer_22">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item row="0" column="0">
+         <item row="1" column="0">
           <widget class="QGroupBox" name="groupBox_31">
            <property name="title">
             <string>Planet ephemeris</string>
@@ -4530,20 +4517,7 @@
            </layout>
           </widget>
          </item>
-         <item row="1" column="0">
-          <spacer name="verticalSpacer_19">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item row="0" column="1">
+         <item row="1" column="1">
           <widget class="QGroupBox" name="groupBox_32">
            <property name="title">
             <string>Moon ephemeris</string>
@@ -4560,6 +4534,104 @@
              <widget class="QRadioButton" name="rb_elp2000">
               <property name="text">
                <string>ELP2000 - Bureau des Longitudes</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <spacer name="verticalSpacer_19">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="1" column="2">
+          <spacer name="horizontalSpacer_22">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="0" column="0">
+          <widget class="QGroupBox" name="groupBox_33">
+           <property name="title">
+            <string>JPL Ephemeris</string>
+           </property>
+           <layout class="QVBoxLayout" name="verticalLayout_106">
+            <item>
+             <widget class="QCheckBox" name="checkBox_22">
+              <property name="text">
+               <string>Use JPL Ephemeris</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="label_119">
+              <property name="text">
+               <string>The order of use ephemeris</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="CSimpleList" name="jplList" native="true"/>
+            </item>
+            <item>
+             <layout class="QHBoxLayout" name="horizontalLayout_33">
+              <item>
+               <widget class="QPushButton" name="pushButton_67">
+                <property name="text">
+                 <string>Up</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="pushButton_68">
+                <property name="text">
+                 <string>Down</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <spacer name="horizontalSpacer_23">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+             </layout>
+            </item>
+            <item>
+             <widget class="Line" name="line_6">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="label_120">
+              <property name="text">
+               <string>If not used or if JPL ephemeris is out of range
+then PLAN404 or VSOP87 is used</string>
               </property>
              </widget>
             </item>
@@ -5433,6 +5505,12 @@
    <header>cstarexample.h</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>CSimpleList</class>
+   <extends>QWidget</extends>
+   <header>csimplelist.h</header>
+   <container>1</container>
+  </customwidget>
  </customwidgets>
  <resources/>
  <connections>
@@ -5443,12 +5521,12 @@
    <slot>setNum(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>417</x>
-     <y>192</y>
+     <x>199</x>
+     <y>69</y>
     </hint>
     <hint type="destinationlabel">
-     <x>455</x>
-     <y>192</y>
+     <x>51</x>
+     <y>69</y>
     </hint>
    </hints>
   </connection>
@@ -5459,12 +5537,12 @@
    <slot>setNum(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>417</x>
-     <y>241</y>
+     <x>199</x>
+     <y>69</y>
     </hint>
     <hint type="destinationlabel">
-     <x>455</x>
-     <y>241</y>
+     <x>51</x>
+     <y>69</y>
     </hint>
    </hints>
   </connection>
@@ -5475,12 +5553,12 @@
    <slot>setNum(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>370</x>
-     <y>277</y>
+     <x>199</x>
+     <y>69</y>
     </hint>
     <hint type="destinationlabel">
-     <x>436</x>
-     <y>274</y>
+     <x>51</x>
+     <y>69</y>
     </hint>
    </hints>
   </connection>
