--- a/resource.qrc
+++ b/resource.qrc
@@ -145,5 +145,6 @@
         <file>res/ico_topo.png</file>
         <file>res/ico_moon.png</file>
         <file>res/ico_pdf.png</file>
+        <file>res/ico_clipboard_from.png</file>
     </qresource>
 </RCC>
