--- a/casteredit.ui
+++ b/casteredit.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>391</width>
-    <height>618</height>
+    <height>625</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -371,6 +371,52 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
+      <widget class="QPushButton" name="pb_copy">
+       <property name="toolTip">
+        <string>Copy elements to clipboard</string>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">padding:2px</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resource.qrc">
+         <normaloff>:/res/ico_clipboard.png</normaloff>:/res/ico_clipboard.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>24</width>
+         <height>24</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pb_from_clip">
+       <property name="toolTip">
+        <string>Restore elements from clipboard</string>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">padding:2px</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resource.qrc">
+         <normaloff>:/res/ico_clipboard_from.png</normaloff>:/res/ico_clipboard_from.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>24</width>
+         <height>24</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -420,6 +466,8 @@
   <tabstop>doubleSpinBox_9</tabstop>
   <tabstop>pushButton_2</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
