--- a/cdownloadmpc.ui
+++ b/cdownloadmpc.ui
@@ -50,6 +50,9 @@
          <property name="maximum">
           <number>999999999</number>
          </property>
+         <property name="value">
+          <number>500</number>
+         </property>
         </widget>
        </item>
        <item row="0" column="1">
